--- a/wp-content/themes/nextstepmaine/sass/layout/content/_search-results.scss
+++ b/wp-content/themes/nextstepmaine/sass/layout/content/_search-results.scss
@@ -1,4 +1,4 @@
-&.search-results {
+.search-results {
 	.search-entry {
 		padding: 8px ;
 		margin: 10px 0 20px 0 ;
